# interpolation

./: .gitignore  README.md  conanfile.py
.github/workflows/: ci.yml
include/: interpolation.hpp
include/interpolation/: interpolation.hpp
test/: CmakeLists.txt  test_catmull_rom.cpp  test_hermite.cpp  test_linear.cpp
test_package/: CMakeLists.txt  conanfile.py  example.cpp
tests/: CMakeLists.txt  test_catmull_rom.cpp  test_hermite.cpp  test_linear.cpp
